--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,7 +1,5 @@
 ---
 deployment:
- tasks:
-  - export DEPLOYPATH=/home2/tcinkant/public_html/
-  - /bin/rm -Rf $DEPLOYPATH
-  - /bin/mkdir $DEPLOYPATH
-  - /bin/cp -R . $DEPLOYPATH
+      tasks:
+        - export DEPLOYPATH=/home2/tcinkant/tcinkant.ca
+        - /bin/cp -r * $DEPLOYPATH                        #copy all recursively to $DEPLOYPATH
