--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 ---
 deployment:
       tasks:
-        - export DEPLOYPATH=/home2/tcinkant/tcinkant.ca
-        - /bin/cp -r * $DEPLOYPATH                        #copy all recursively to $DEPLOYPATH
+        - export DEPLOYPATH=/home2/tcinkant/public_html
+        - /bin/cp -r ./ $DEPLOYPATH
